# Proyecto1_ML

./: Lab_2.ipynb  README.md  main.py  proyecto_1.ipynb  pyproject.toml
